--- a/templates/simple/style-albe-timeline.css
+++ b/templates/simple/style-albe-timeline.css
@@ -1,3 +1,8 @@
+/*
+    Based on: https://jamespautz.com/vertical-css-timeline
+    ---------------------------------------------------------------------
+*/
+
 body { font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 14px; line-height: 1em; color: #333; background-color: #EFEFEF; margin: 0; }
 h2,
 h3,
