--- a/templates/horizontal/index.html
+++ b/templates/horizontal/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/jquery/1.11.1/jquery.min.js"></script>
-    <script src="../../jquery-albe-timeline-2.0.0.mim.js"></script>
+    <script src="../../jquery-albe-timeline-2.0.0.min.js"></script>
     <script src="data-albe-timeline.js"></script>
 </body>
 </html>
