--- a/templates/audain/index.html
+++ b/templates/audain/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/jquery/1.11.1/jquery.min.js"></script>
-    <script src="../../jquery-albe-timeline-3.0.0.min.js"></script>
+    <script src="../../jquery-albe-timeline.min.js"></script>
     <script src="data-albe-timeline.js"></script>
 </body>
 </html>
