--- a/templates/vertical/index.html
+++ b/templates/vertical/index.html
@@ -34,7 +34,7 @@
     <div id="myTimeline">
     </div>
 
-    <script src="https://cdn.jsdelivr.net/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../../jquery-albe-timeline.min.js"></script>
     <script src="data-albe-timeline.js"></script>
 </body>
